feat: better portal activity tools
